@@ -11,7 +11,7 @@ class modWebResourceproductGetDataProcessor extends ShopmodxWebGetDataProcessor{
         return parent::prepareQueryBeforeCount($c);
     }
     
-    public function setSelection(xPDOQuery $c) {
+    protected function setSelection(xPDOQuery $c) {
         $c = parent::setSelection($c);
         $c->select(array(
             "Product.*",
