@@ -6,7 +6,7 @@ class modWebResourceproductGetlistProcessor extends ShopmodxWebGetlistProcessor{
         return parent::prepareQueryBeforeCount($c);
     }
     
-    public function setSelection(xPDOQuery $c) {
+    protected function setSelection(xPDOQuery $c) {
         $c = parent::setSelection($c);
         $c->select(array(
             "Product.*",
